[WinCairo] Fix build after r224463 https://bugs.webkit.org/show_bug.cgi?id=179310

Unreviewed build fix.

No new tests (No behavior change).

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-11-05

* platform/graphics/win/GraphicsContextCairoWin.cpp: Include "GraphicsContextImpl.h".

Canonical link: https://commits.webkit.org/195399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224476 268f45cc-cd09-0410-ab3c-d52691b4dbfc